force-app/main/default/objects/Product2/fields/bt_stripe__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Error_Message__c</fullName>
    <inlineHelpText>Product error message. This field auto-populates if there is an error when the product is pushed to stripe.</inlineHelpText>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>