force-app/main/default/objects/Product2/fields/bt_stripe__Product_ID__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Product_ID__c</fullName>
    <description>The ID of the Product from the Payment Gateway.</description>
    <inlineHelpText>The ID of the Product from the Payment Gateway.</inlineHelpText>
    <label>Product ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>