force-app/main/default/objects/Product2/fields/Image_Replacable__c.field-meta.xml
<CustomField>
    <fullName>Image_Replacable__c</fullName>
    <formula>True</formula>
    <label>Image Replacable</label>
    <type>Checkbox</type>
</CustomField>