force-app/main/default/objects/Product2/fields/Product_Brand__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand__c</fullName>
    <label>Product Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acne Studios</fullName>
            </value>
            <value>
                <fullName>Agent Provocateur</fullName>
            </value>
            <value>
                <fullName>Alexander McQueen</fullName>
            </value>
            <value>
                <fullName>AllSaints</fullName>
            </value>
            <value>
                <fullName>Ammoura Lebanese Kitchen</fullName>
            </value>
            <value>
                <fullName>Anastasia Beverly Hills</fullName>
            </value>
            <value>
                <fullName>Anne Fontaine</fullName>
            </value>
            <value>
                <fullName>Annoushka</fullName>
            </value>
            <value>
                <fullName>Anya Hindmarch</fullName>
            </value>
            <value>
                <fullName>Aquazzura</fullName>
            </value>
            <value>
                <fullName>Armani</fullName>
            </value>
            <value>
                <fullName>ASICS</fullName>
            </value>
            <value>
                <fullName>Ba&amp;sh</fullName>
            </value>
            <value>
                <fullName>Balenciaga</fullName>
            </value>
            <value>
                <fullName>Bally</fullName>
            </value>
            <value>
                <fullName>Balmain</fullName>
            </value>
            <value>
                <fullName>Bamford</fullName>
            </value>
            <value>
                <fullName>Barbour</fullName>
            </value>
            <value>
                <fullName>Belstaff</fullName>
            </value>
            <value>
                <fullName>Bonpoint</fullName>
            </value>
            <value>
                <fullName>BOSS</fullName>
            </value>
            <value>
                <fullName>Bottega Veneta</fullName>
            </value>
            <value>
                <fullName>Boucheron</fullName>
            </value>
            <value>
                <fullName>Brioni</fullName>
            </value>
            <value>
                <fullName>Brooks Brothers</fullName>
            </value>
            <value>
                <fullName>Brunello Cucinelli</fullName>
            </value>
            <value>
                <fullName>Burberry</fullName>
            </value>
            <value>
                <fullName>Café Wolseley</fullName>
            </value>
            <value>
                <fullName>Calvin Klein Jeans</fullName>
            </value>
            <value>
                <fullName>Calvin Klein Underwear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>