force-app/main/default/objects/Product2/fields/Product_Label__c.field-meta.xml
<CustomField>
    <fullName>Product_Label__c</fullName>
    <formula>Text(Product_Brand__c)&amp; &quot;&lt;br&gt;&quot; &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Label</label>
    <type>Text</type>
</CustomField>