force-app/main/default/objects/Product2/fields/PRX__Price__c.field-meta.xml
<CustomField>
    <fullName>PRX__Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>