force-app/main/default/objects/Product2/fields/PRX__Searchable__c.field-meta.xml
<CustomField>
    <fullName>PRX__Searchable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Searchable</label>
    <type>Checkbox</type>
</CustomField>