force-app/main/default/objects/Product2/recordTypes/Clienteling_Manual.recordType-meta.xml
<RecordType>
    <fullName>Clienteling_Manual</fullName>
    <active>true</active>
    <description>Product record type for manually created information</description>
    <label>Clienteling Manual</label>
</RecordType>